change horizontal scroll bugs

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,7 @@ body {
 html {
   ::-webkit-scrollbar {
     width: 4px;
+    height: 0px;
   }
 
   ::-webkit-scrollbar-thumb {
