--- a/src/components/widgets/HappyStories/styles.module.scss
+++ b/src/components/widgets/HappyStories/styles.module.scss
@@ -88,7 +88,7 @@
 
     &__slider_wrapper {
       overflow-x: scroll;
-      overflow-x: hidden;
+      overflow-y: hidden;
       width: 100%;
     }
 
